--- a/views/scripts/dropdown.ejs
+++ b/views/scripts/dropdown.ejs
@@ -1,8 +1,10 @@
 <script>
-	$(".dropdown-menu > li > a").on('click', {}, function (evt) {
-        var name = $(this).text();
-        var dropdown = $(this).parent().parent().prev();
-        dropdown.text(name + " ");
-        dropdown.append('<b class="caret"></b>');
-    });
+	$(document).ready(function () {
+		$(".dropdown-menu > li > a").on('click', {}, function (evt) {
+	        var name = $(this).text();
+	        var dropdown = $(this).parent().parent().prev();
+	        dropdown.text(name + " ");
+	        dropdown.append('<b class="caret"></b>');
+	    });
+	})
 </script>
