Linea de tiempo por medio para entidad especifica

--- a/views/medios.ejs
+++ b/views/medios.ejs
@@ -225,14 +225,14 @@
                                 </tr>
                             </tbody>
                         </table>
-                        <!--
-                        <div class="col-lg-6">
-                                <canvas id="activity-casos-1" width="100%" height="300"></canvas>
+                        
+                    </div>
+                    <div class="row">
+                        <div class="col-md-12">
+                            <div class="card">
+                                <canvas id="activity-casos" width="100%" height="250"></canvas>
+                            </div>
                         </div>
-                        <div class="col-lg-6">
-                                <canvas id="activity-casos-2" width="100%" height="300"></canvas>
-                        </div>
-                        -->
                     </div>
                     <div class="row">
                         <div class="col-lg-6">
@@ -272,6 +272,15 @@
                             </tbody>
                         </table>
 
+                    </div>
+                    <div class="row">
+                        <div class="col-md-12">
+                            <div class="card">
+                                <canvas id="activity-lideres" width="100%" height="250"></canvas>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
                         <div class="col-lg-6">
                                 <h2 id="count-lideres-1" class="text-center">0</h2><h4 class="text-center">publicaciones</h4>
                                 <p id="describe-count-lideres-1"></p>
@@ -311,6 +320,15 @@
                             </tbody>
                         </table>
 
+                    </div>
+                    <div class="row">
+                        <div class="col-md-12">
+                            <div class="card">
+                                <canvas id="activity-partidos" width="100%" height="250"></canvas>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">    
                         <div class="col-lg-6">
                                 <h2 id="count-partidos-1" class="text-center">0</h2><h4 class="text-center">publicaciones</h4>
                                 <p id="describe-count-partidos-1"></p>
@@ -349,6 +367,15 @@
                             </tbody>
                         </table>
 
+                    </div>
+                    <div class="row">
+                        <div class="col-md-12">
+                            <div class="card">
+                                <canvas id="activity-instituciones" width="100%" height="250"></canvas>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
                         <div class="col-lg-6">
                                 <h2 id="count-instituciones-1" class="text-center">0</h2><h4 class="text-center">publicaciones</h4>
                                 <p id="describe-count-instituciones-1"></p>
@@ -359,15 +386,6 @@
                                 <p id="describe-count-instituciones-2"><i></i></p>
                                 <p id="describe-corrupcion-count-instituciones-2"></p>
                         </div>
-                    </div>
-                    <div class="row">
-                        
-                    </div>
-                    <div class="row">
-                        
-                    </div>
-                    <div class="row">
-                        
                     </div>
                 </div>
             </div>
