--- a/views/scripts/all-graphs.ejs
+++ b/views/scripts/all-graphs.ejs
@@ -67,7 +67,9 @@
 		            type: 'bar',
 		            data: barChartData,
 		            options: {
+		            	animation: false,
 		                responsive: true,
+		            	maintainAspectRatio: false,
 		                legend: {
 		                    position: 'top',
 		                },
