--- a/views/mediostodo.ejs
+++ b/views/mediostodo.ejs
@@ -162,7 +162,8 @@
                     <div class="row">
                         <!-- Line chart Publicaciones corrupcion -->
                         <div class="col-lg-12">
-                            <canvas id="publicaciones-corrupcion"></canvas>
+                            <!--<canvas id="activity-casos" width="100%" height="250"></canvas>-->
+                            <canvas id="publicaciones-corrupcion" width="100%" height="500"></canvas>
                         </div>
                     </div>
                     <div class="row">
@@ -194,7 +195,7 @@
                         </table>
 
                         <div class="col-lg-12">
-                            <canvas id="casos-corrupcion"></canvas>
+                            <canvas id="casos-corrupcion" width="100%" height="500"></canvas>
                         </div>
                     </div>
                     <div class="row">
@@ -226,7 +227,7 @@
                         </table>
 
                         <div class="col-lg-12">
-                            <canvas id="lideres-opinion"></canvas>
+                            <canvas id="lideres-opinion" width="100%" height="500"></canvas>
                         </div>
                     </div>
                     <div class="row">
@@ -258,7 +259,7 @@
                         </table>
 
                         <div class="col-lg-12">
-                            <canvas id="partidos-politicos"></canvas>
+                            <canvas id="partidos-politicos" width="100%" height="500"></canvas>
                         </div>
                     </div>
                     <div class="row">
@@ -290,7 +291,7 @@
                         </table>
 
                         <div class="col-lg-12">
-                            <canvas id="publicaciones-instituciones"></canvas>
+                            <canvas id="publicaciones-instituciones" width="100%" height="500"></canvas>
                         </div>
                     </div>
                     <div class="row">
