--- a/views/scripts/graphs-medios.ejs
+++ b/views/scripts/graphs-medios.ejs
@@ -10,6 +10,8 @@
         var currentLeader = "<%= lideres[0].id %>";
         var currentPartido = "<%= partidos[0].id %>";
         var currentInstitucion = "<%= instituciones[0].id %>";
+        var medioLeftPretty = "<%= medios[0].name %>";
+        var medioRightPretty = "<%= medios[1].name %>";
 
         console.log("medioLeft", medioLeft);
         console.log("medioRight", medioRight);
@@ -41,112 +43,181 @@
             md.startAnimationForLineChart(dailySalesChart);
         }*/
 
-        function updateGraph(graphId, labels, data, firstTime=false) {
-            var barChartData = {
-                labels: labels,
-                datasets: data
+        function updateGraph(graphId, labels, data, title, firstTime=false) {
+            var configCasos = {
+                type: 'line',
+                data: {
+                    labels: labels,
+                    datasets: [{
+                        label: medioLeftPretty,
+                        lineTension: 0,
+                        backgroundColor: window.chartColors.green,
+                        borderColor: window.chartColors.green,
+                        data: data[0],
+                        fill: false
+                    },
+                    {
+                        label: medioRightPretty,
+                        lineTension: 0,
+                        backgroundColor: window.chartColors.blue_like,
+                        borderColor: window.chartColors.blue_like,
+                        data: data[1],
+                        fill: false
+                    }
+                    ]
+                },
+                options: {
+                    responsive: true,
+                    maintainAspectRatio: false,
+                    title:{
+                        display:true,
+                        text: title
+                    },
+                    tooltips: {
+                        mode: 'index',
+                        intersect: false,
+                    },
+                    hover: {
+                        mode: 'nearest',
+                        intersect: true
+                    },
+                    scales: {
+                        xAxes: [{
+                            display: true,
+                            scaleLabel: {
+                                display: true,
+                                labelString: 'Tiempo'
+                            }
+                        }],
+                        yAxes: [{
+                            display: true,
+                            scaleLabel: {
+                                display: true,
+                                labelString: 'Valor'
+                            }
+                        }]
+                    }
+                }
             };
 
-            console.log("data", data);
-            
-            //barChartData.datasets = data;
 
             if (firstTime) {
                 var ctx = document.getElementById(graphId).getContext("2d");
-                window[graphId] = new Chart(ctx, {
-                    type: 'bar',
-                    data: barChartData,
-                    options: {
-                        responsive: true,
-                        legend: {
-                            position: 'top',
-                        },
-                        title: {
-                            display: false,
-                            text: 'Publicaciones sobre corrupción'
-                        },
-                        scales: {
-                            yAxes: [{
-                                ticks: {
-                                    beginAtZero:true
-                                }
-                            }],
-                            xAxes: [{
-                                ticks: {
-                                  autoSkip: false,
-                                  maxRotation: 90,
-                                  minRotation: 90
-                                }
-                            }]
-                        }
-                    }
-                });
+                window[graphId] = new Chart(ctx, configCasos);
                 
                 window[graphId].update()
             }
             else {
-                window[graphId].data = barChartData;
+                window[graphId].data = {
+                    labels: labels,
+                    datasets: [{
+                        label: medioLeftPretty,
+                        lineTension: 0,
+                        backgroundColor: window.chartColors.green,
+                        borderColor: window.chartColors.green,
+                        data: data[0],
+                        fill: false
+                    },
+                    {
+                        label: medioRightPretty,
+                        lineTension: 0,
+                        backgroundColor: window.chartColors.blue_like,
+                        borderColor: window.chartColors.blue_like,
+                        data: data[1],
+                        fill: false
+                    }]
+                }
+
                 window[graphId].update()
             }
         }
 
-        function getPostCountFor(entity, pageId, callback) {
-            $.get("/summary/descriptive/posts/" + pageId + "/" + entity + "/" + currentCase, function (data) {
+        function getPostCountFor(entity, pageId, specific, callback) {
+            $.get("/summary/descriptive/posts/" + pageId + "/" + entity + "/" + specific, function (data) {
+                console.log("data is", data);
                 callback(data);
             });
         }
 
         function updateGraphsMedio(side) {
-            console.log("updateGraphsMedio");
             if (side == "left") {
+                // TODO: update todo lo del lado izquierdo. OJO: parametros de getPostCountFor (aqui estan incompletos)
                 getPostCountFor("casos", medioLeft, function (casos) {
                     console.log("getPostCountFor", casos);
+                    //updateGraph('activity-casos-1');
                 });
-                updateGraph('activity-casos-1');
             }
             else if (side == "right") {
                 
             }
         }
 
-        function initialize() {
-            getPostCountFor("casos", medioLeft, function (casos) {
-                    console.log("getPostCountFor", casos);
-                    updateGraph('activity-casos-1', casos.labels, casos.data, true);
+        function getDataForMedios(entity, specific, callback) {
+            getPostCountFor(entity, medioLeft, specific, function (casosLeft) {
+                    console.log("casosLeft", casosLeft);
+                    getPostCountFor(entity, medioRight, specific, function (casosRight) {
+                        console.log("casosLeft", casosRight);
+                        callback({
+                            labels: casosLeft.labels,
+                            data:  [casosLeft.data, casosRight.data]
+                        });
+                    });
                 });
         }
 
-        initialize();
+        function initialize(firstTime=false) {
+            getDataForMedios("casos", currentCase, function (data) {
+                updateGraph('activity-casos', data.labels, data.data, "Publicaciones sobre el caso", firstTime);
+            });
+            getDataForMedios("lideres", currentLeader, function (data) {
+                updateGraph('activity-lideres', data.labels, data.data, "Publicaciones sobre el líder de opinión", firstTime);
+            });
+            getDataForMedios("partidos", currentPartido, function (data) {
+                updateGraph('activity-partidos', data.labels, data.data, "Publicaciones sobre el partido político", firstTime);
+            });
+            getDataForMedios("instituciones", currentInstitucion, function (data) {
+                updateGraph('activity-instituciones', data.labels, data.data, "Publicaciones sobre la institución", firstTime);
+            });
+        }
+
+        initialize(true);
 
         function updateStatsManager(entity, dropdown) {
             if (dropdown == "medios-1") {
                 medioLeft = entity;
-                updateGraphsMedio("left");
+                //updateGraphsMedio("left");
+                initialize();
             }
             else if (dropdown == "medios-2") {
                 medioRight = entity;
-                updateGraphsMedio("right");
+                //updateGraphsMedio("right");
+                initialize();
             }
             else {
                 if (dropdown == "casos") {
                     currentCase = entity;
-                    animateCount('count-casos-1', medioLeft, "casos", entity);
-                    animateCount('count-casos-2', medioRight, "casos", entity);
+                    getDataForMedios("casos", currentCase, function (data) {
+                        updateGraph('activity-casos', data.labels, data.data, "Publicaciones sobre el caso");
+                    });
                 }
                 else if (dropdown == "lideres") {
                     currentLeader = entity;
-                    animateCount('count-lideres-1', medioLeft, "lideres", entity);
-                    animateCount('count-lideres-2', medioRight, "lideres", entity);
+                    getDataForMedios("lideres", currentLeader, function (data) {
+                        updateGraph('activity-lideres', data.labels, data.data, "Publicaciones sobre el líder de opinión");
+                    });
+                    
                 }
                 else if (dropdown == "partidos") {
                     currentPartido = entity;
-                    animateCount('count-partidos-1', medioLeft, "partidos", entity);
-                    animateCount('count-partidos-2', medioRight, "partidos", entity);
+                    getDataForMedios("partidos", currentPartido, function (data) {
+                        updateGraph('activity-partidos', data.labels, data.data, "Publicaciones sobre el partido político");
+                    });
                 }
                 else if (dropdown == "instituciones") {
                     currentInstitucion = entity;
-                    animateCount('count-instituciones-1', medioLeft, "instituciones", entity);
-                    animateCount('count-instituciones-2', medioRight, "instituciones", entity);
+                    getDataForMedios("instituciones", currentInstitucion, function (data) {
+                        updateGraph('activity-instituciones', data.labels, data.data, "Publicaciones sobre la institución");
+                    });
                 }
             }
         }
@@ -156,6 +227,12 @@
             var dropdown = $(this).parent().parent().attr("id");
             console.log("dropdown", dropdown);
             console.log("entity", entity);
+            if (dropdown == "medios-1") {
+                medioLeftPretty = $(this).text();
+            }
+            else if (dropdown == "medios-2") {
+                medioRightPretty = $(this).text();
+            }
             updateStatsManager(entity, dropdown);
             
         });
