Change title graph reactions

--- a/views/scripts/actividad.ejs
+++ b/views/scripts/actividad.ejs
@@ -74,8 +74,6 @@
         var configActividad = {
             type: 'line',
             data: {
-                // TODO: poner años programatically
-                /*labels: ["Enero/16", "Febrero/16", "Marzo/16", "Abril/16", "Mayo/16", "Junio/16", "Julio/16", "Agosto/16", "Septiembre/16", "Octubre/16", "Noviembre/16", "Diciembre/16", "Enero/17", "Febrero/17", "Marzo/17", "Abril/17", "Mayo/17", "Junio/17", "Julio/17", "Agosto/17", "Septiembre/17", "Octubre/17", "Noviembre/17", "Diciembre/17"],*/
                 labels: monthlyLabels,
                 datasets: [{
                     label: labelPublicaciones,
@@ -200,7 +198,7 @@
 	            maintainAspectRatio: false,
 	            title:{
 	                display:true,
-	                text:'Reacciones'
+	                text:'Reacciones en noticias sobre este líder de opinión'
 	            },
 	            tooltips: {
 	                mode: 'index',
